tests/NormalTests/paczka1/fuzzy1/70966015.err
Error in line 8: CVo0eK1 S564 72;8
Error in line 3: CVo0eK1 A701 3,9
Error in line 11: S73 S73 11,8
Error in line 26: 2Jjzylzm S73 52,8
Error in line 30: RRKTiBCJ889 A7Z1 4Z,5
